--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -1,3 +1,93 @@
+version: 1.0
+ban:
+  usageban: '&cUsage &7» &c/ban <joueur|uuid|ip> [temps] <motif>'
+  usageunban: '&cUsage &7» &c/unban <pseudo|uuid|ip> <motif>'
+  usageunmute: '&cUsage &7» &c/unmute <pseudo|uuid> <motif>'
+  usagemute: '&cUsage &7» &c/mute <joueur|uuid|ip> <temps> <motif>'
+  usagekick: '&cUsage &7» &c/kick <joueur|uuid|ip> <motif>'
+  usagehistban: '&cUsage &7» &c/histban <joueur|uuid|ip|id>'
+  usagehistmute: '&cUsage &7» &c/histmute <joueur|uuid|ip>'
+  usagehistkick: '&cUsage &7» &c/histkick <joueur|uuid|ip>'
+  tempbanannounce: '&2[&cBAN&2] &7%player% a été banni pendant %time% pour %reason%'
+  tempbanannouncetoauthor: '&4%player%&c a été banni pendant &4%time%&c pour &4%reason%&c.'
+  tempbandisconnect: "&cVous avez été banni pour &4%reason%\n\n&cDurée restante: &4%time%\n\n&cID: &4%id%\n\n&2&n&lSachez qu'il est impossible de faire une demande de débannissement."
+  banannounce: '&2[&cBAN&2] &7%player% a été banni &npermanent&7 pour %reason%'
+  banannouncetoauthor: '&4%player% &ca été banni &npermanent&c pour &4%reason%&c.'
+  bandisconnect: "&cVous avez été banni &npermanent&c pour &4%reason%\n\n&cID: &4%id%"
+  alreadyban: '&4%player% &cest déjà banni.'
+  muteannounce: '&2[&cBAN&2] &7%player% a été banni &npermanent&7 pour %reason%'
+  muteannouncetotarget: '&cVous avez été mute &npermanent&c pour &4%reason%&c.'
+  muteannouncetoauthor: '&4%player%&c a été mute &npermanent&c pour &4%reason%&c.'
+  tempbanipannouncetoauthor: '&4%ip%&c a été banni pendant &4%time%&c pour &4%reason%&c.'
+  tempbanipdisconnect: "&cVous avez été banni pour &4%reason%\n\n&cDurée restante: &4%time%\n\n&cID: &4%id%\n\n&2&n&lSachez qu'il est impossible de faire une demande de débannissement."
+  banipannouncetoauthor: '&4%ip% &ca été banni &npermanent&c pour &4%reason%&c'
+  banipdisconnecttoauthor: '&4%ip% &ca été banni &npermanent&c pour &4%reason%&c'
+  banipdisconnect: "&cVous avez été banni &npermanent&c pour &4%reason%\n\n&cID: &4%id%"
+  unbanannouncetoauthor: '&2Unban &7» &2%player% &aa été débanni pour &2%reason%&a.'
+  notbanned: '&4%player% &cn''est pas banni.'
+  unmuteannouncetoauthor: '&2Unmute &7» &2%player% &aa été démute pour &2%reason%&a.'
+  notmuted: '&4%player% &cn''est pas mute.'
+  tempmuteannounce: '&2[&cMUTE&2] &7%player% a été mute pendant %time% pour %reason%'
+  tempmuteannouncetotarget: '&cVous avez été mute pendant &4%time%&c pour &4%reason%&c.'
+  tempmuteannouncetoauthor: '&c%player% a été mute pendant &4%time%&c pour &4%reason%&c.'
+  youaremuted: '&cVous êtes mute pour &4%reason% &cpendant encore &4%expire%&c.'
+  alreadymute: '&4%player% &cest déjà mute.'
+  kicknotconnected: '&cLe joueur &4%player%&c n''est pas connecté.'
+  kickannounce: '&2[&cKICK&2] &7%player% a été kick pour %reason%'
+  kickannouncetoauthor: '&c%player% a été kick&c pour &4%reason%&c par &4%author%&c.'
+  kickdisconnect: "&cVous avez été kick pour &4%reason%\n\n&cID: &4%id%"
+  playerneverjoin: '&cLe joueur &4%player% &cn''a jamais rejoinds le serveur.'
+  errordb: '&cUne erreur avec la base de donnés est survenu.'
+  cantbypassmaxbantime: '&cVous ne devez pas dépasser la durée minimal de ban qui est de &410 minutes.'
+  cantbypassmminbantime: '&cVous ne devez pas dépasser la durée maximal de ban qui est de &41 an.'
+  cantbypassmaxmutetime: '&cVous ne devez pas dépasser la durée minimal de mute qui est de &41 minute&c.'
+  cantbypassmminmutetime: '&cVous ne devez pas dépasser la durée maximal de mute qui est de &41 mois&c.'
+  cantbanstaffmembers: '&cVous ne devez pas bannir un membre du staff. En cas de problèmes, merci de contacter un &4Responsable &cou un &4Admin&c.'
+  cantmutestaffmembers: '&cVous ne devez pas mute un membre du staff. En cas de problèmes, merci de contacter un &4Responsable &cou un &4Admin&c.'
+  cantkicktaffmembers: '&cVous ne devez pas kick un membre du staff. En cas de problèmes, merci de contacter un &4Responsable &cou un &4Admin&c.'
+  idinvalid: '&4%id%&c n''est pas un Id de ban valide.'
+  ipinvalid: '&4%ip%&c n''est pas une IP valide.'
+  typeunknown: '&4%type% &cn''est ni un uuid, ni un joueur, ni une IP.'
+  units:
+    second:
+      - second
+      - seconds
+      - secs
+      - sec
+      - s
+      - seconde
+      - secondes
+    minute:
+      - minute
+      - minutes
+      - m
+      - mins
+      - min
+    hour:
+      - hour
+      - hours
+      - h
+      - heure
+      - heures
+    day:
+      - day
+      - days
+      - d
+      - jour
+      - jours
+      - j
+    month:
+      - month
+      - months
+      - mo
+      - mois
+    year:
+      - year
+      - years
+      - y
+      - an
+      - ans
+      - a
 chat:
   insult:
     - ez
