--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -191,3 +191,22 @@ database:
       user: olympa
       password: hwTyJqzj7wqxNrDtZyyA
       database: olympa
+default:
+   noperm: '&6Olympa &7» &cVous n''avez pas la permission &l(◑_◑)'
+   homeamade: '&6Olympa &7» &aTous nos plugins sont développés par nos soins. &2&lᕙ(＾▿＾)ᕗ'
+   cantconsole: '&6Olympa &7» &cImpossible avec la console'
+   unknownusername: '&6Olympa &7» &4%player%&c n''est pas connecté.'
+   iuidinvalid: '&6Olympa &7» &4%uuid%&c n''est pas un UUId valide.'
+   ipinvalid: '&6Olympa &7» &4%ip%&c n''est pas une IP valide.'
+   typeunknown: '&6Olympa &7» &4%type% &cn''est ni un uuid, ni un joueur, ni une ip.'
+   playerneverjoin: '&6Olympa &7» &cLe joueur &4%player% &cn''a jamais rejoinds le serveur.'
+   connectscreenprefix: |3+
+
+      &b&m-------------------------------------------
+
+      &e[&6Olympa&e]
+
+   connectscreensuffix: |3-
+
+
+      &b&m-------------------------------------------
