--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,8 @@
 		<dependency>
 			<groupId>fr.olympa</groupId>
 			<artifactId>olympa-api</artifactId>
-			<version>[0.0.1-SNAPSHOT,)</version>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	<build>
