--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -1,4 +1,5 @@
-version: 1.0
+version: 1.1
+status: 'Ouvert'
 maintenance:
    messages:
       usage: '&cUsage &7» &c/maintenance [on|off|dev|add|remove|list|status] <raison|joueur>'
