--- a/pom.xml
+++ b/pom.xml
@@ -12,20 +12,41 @@
 			<id>bungeecord-repo</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</repository>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
 	</repositories>
 	<dependencies>
+			<!--<dependency>
+			<groupId>com.github.ProtocolSupport</groupId>
+			<artifactId>ProtocolSupport</artifactId>
+			<version>[279088df24,)</version>
+		</dependency>
+	 	<dependency>
+			<groupId>com.github.ProtocolSupport</groupId>
+			<artifactId>ProtocolSupportBungee</artifactId>
+			<version>[6718e7d,)</version>
+		</dependency> -->
 		<dependency>
 			<groupId>net.md-5</groupId>
 			<artifactId>bungeecord-api</artifactId>
-			<version>1.15-SNAPSHOT</version>
+			<version>[1.15-SNAPSHOT,)</version>
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>net.md-5</groupId>
 			<artifactId>bungeecord-api</artifactId>
-			<version>1.15-SNAPSHOT</version>
+			<version>[1.15-SNAPSHOT,)</version>
 			<type>javadoc</type>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.md-5</groupId>
+			<artifactId>bungeecord-api</artifactId>
+			<version>[1.15-SNAPSHOT,)</version>
+			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
