--- a/src/resources/plugin.yml
+++ b/src/resources/plugin.yml
@@ -1,5 +1,6 @@
 name: OlympaCore
 main: fr.olympa.core.spigot.OlympaCore
 authors: [Tristiisch, SkytAsul]
+soft-depend: ProtocolSupport
 api-version: 1.15
 version: 0.1
