--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -132,14 +132,19 @@ chat:
    - "|ptn"
    - "|nik"
    - "|ftg"
-   - "|con"
+   - "|con|"
+   - "|cons|"
+   - "|cone|"
+   - "|conne|"
+   - "|connes|"
    - "|fdp"
    - "|ntm"
    - "|tepu"
-   - "|anal"
+   - "|anal|"
    - "|fuck"
    - "|bite"
-   - "|suce"
+   - "|suce|"
+   - "|suces|"
    - "|suck"
    - "|noob"
    - "|pute"
@@ -171,7 +176,7 @@ chat:
    - "|branle"
    - "|emerde"
    - "|gogol"
-   - "|msk"
+   - "|msk|"
    - "|miskine"
    linkwhitelist:
    - olympa.fr
