Ajout d'un début d'api pour les insultes

--- a/src/resources/bungee.yml
+++ b/src/resources/bungee.yml
@@ -1,5 +1,5 @@
 name: OlympaBungee
 main: fr.olympa.core.bungee.OlympaBungee
-author: Tristiisch
+authors: [Tristiisch, SkytAsul]
 version: 0.1
 website: https://olympa.fr
