--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -129,17 +129,15 @@ chat:
    - "|fdp"
    - "|pd"
    - "|tg"
-   - "|ptn"
    - "|nik"
    - "|ftg"
    - "|con|"
-   - "|cons|"
    - "|cone|"
    - "|conne|"
    - "|connes|"
    - "|fdp"
    - "|ntm"
-   - "|tepu"
+   - "tepu"
    - "|anal|"
    - "|fuck"
    - "|bite"
@@ -147,6 +145,7 @@ chat:
    - "|suces|"
    - "|suck"
    - "|noob"
+   - "pute|"
    - "|pute"
    - "|pt1"
    - "|put1"
