--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -125,11 +125,12 @@ ban:
       - a
 chat:
    insult:
-   - "|ez"
+   - "|ez|"
    - "|fdp"
    - "|pd"
-   - "|tg"
-   - "|nik"
+   - "|tg|"
+   - "|nik|"
+   - "|nike|"
    - "|ftg"
    - "|con|"
    - "|cone|"
@@ -145,7 +146,7 @@ chat:
    - "|suces|"
    - "|suck"
    - "|noob"
-   - "pute|"
+   - "|pute|"
    - "|pute"
    - "|pt1"
    - "|put1"
@@ -162,15 +163,14 @@ chat:
    - "|salope|"
    - "|salopar"
    - "|connar"
-   - "|chate"
    - "|encule"
    - "|foutre"
    - "|pedal"
    - "|couil"
    - "|bougnoul"
    - "|baltring"
-   - "|leuleu"
-   - "|levrette"
+   - "|leuleu|"
+   - "|levrette|"
    - "|sodomi"
    - "|abruti"
    - "|branle"
