--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -134,28 +134,26 @@ chat:
    - "|cone|"
    - "|conne|"
    - "|connes|"
-   - "|fdp"
-   - "|ntm"
-   - "tepu"
+   - "|fdp|"
+   - "|ntm|"
+   - "|tepu|"
    - "|anal|"
    - "|fuck"
    - "|bite"
    - "|suce|"
    - "|suces|"
-   - "|suck"
-   - "|noob"
+   - "|suck|"
+   - "|nob|"
    - "|pute|"
-   - "|pute"
-   - "|pt1"
-   - "|put1"
-   - "|putain"
+   - "|pt1|"
+   - "|put1|"
+   - "|putain|"
    - "|gueule"
    - "|geule"
    - "|merde"
    - "|kikou|"
    - "|batar"
    - "|fiot"
-   - "|zbeub"
    - "|salo|"
    - "|salop|"
    - "|salope|"
@@ -169,11 +167,13 @@ chat:
    - "|baltring"
    - "|leuleu|"
    - "|levrette|"
-   - "|sodomi"
-   - "|abruti"
-   - "|branle"
+   - "|sodomie|"
+   - "|sodomi|"
+   - "|abruti|"
+   - "|branle|"
    - "|emerde"
-   - "|gogol"
+   - "|gogol|"
+   - "|gogole|"
    - "|msk|"
    - "|miskine"
    linkwhitelist:
