up config, ban & ajout de AccountProvider.getFromRedis(name)

--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -161,7 +161,8 @@ chat:
    - "|connar"
    - "|encule"
    - "|foutre"
-   - "|pedal"
+   - "|pedal|"
+   - "|pedalo|"
    - "|couil"
    - "|bougnoul"
    - "|baltring"
