--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -186,8 +186,8 @@ database:
    default:
       host: localhost
       port: 3306
-      user: olympa
-      password: password
+      user: minecraft
+      password: xANlb20FmQCkofyZ4oPLgKFIX1CYuy8n7nmP9tGUkZu95M11HD
       database: server
 default:
    noperm: '&cTu n''as pas la permission &l(◑_◑)'
