--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,18 @@
 			<id>jitpack.io</id>
 			<url>https://jitpack.io</url>
 		</repository>
+		<repository>
+		    <id>viaversion-repo</id>
+		    <url>https://repo.viaversion.com</url>
+		</repository>
 	</repositories>
 	<dependencies>
+		<dependency>
+			<groupId>us.myles</groupId>
+			<artifactId>viaversion</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.github.ProtocolSupport</groupId>
 			<artifactId>ProtocolSupport</artifactId>
