add ./ping & ./bping, /report -> test v1 ...

--- a/src/resources/bungee.yml
+++ b/src/resources/bungee.yml
@@ -1,5 +1,5 @@
 name: OlympaBungee
 main: fr.olympa.core.bungee.OlympaBungee
-authors: [Tristiisch, SkytAsul]
+author: Tristiisch, SkytAsul
 version: 0.1
 website: https://olympa.fr
