--- a/src/resources/plugin.yml
+++ b/src/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: OlympaCore
 website: https://olympa.fr
 main: fr.olympa.core.spigot.OlympaCore
-authors: [Tristiisch, SkytAsul]
+author: Tristiisch, SkytAsul
 version: 0.1
 softdepend: [ProtocolSupport, ViaVersion]
 api-version: 1.15
