--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 				<updatePolicy>never</updatePolicy>
 			</snapshots>
 			<releases>
-				<enabled>false</enabled>
+				<enabled>true</enabled>
 				<updatePolicy>daily</updatePolicy>
 			</releases>
 		</repository>
