--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -1,4 +1,4 @@
-version: 1.2
+version: 1.3
 status: 'Développement'
 maintenance:
    messages:
@@ -35,6 +35,7 @@ ban:
       &cTu a été banni &npermanent&c pour &4%reason%
 
       &cId: &4%id%
+   alreadysanctionned: '&4%s &cest déjà sanctionné pour %s.'
    alreadyban: '&4%player% &cest déjà banni.'
    muteannounce: '&2[&cBAN&2] &7%player% a été banni &npermanent&7 pour %reason%'
    muteannouncetotarget: '&cTu a été mute &npermanent&c pour &4%reason%&c.'
