--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>io.github.waterfallmc</groupId>
+			<artifactId>waterfall-protocol</artifactId>
+			<version>1.16-R0.4-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.destroystokyo.paper</groupId>
 			<artifactId>paper-api</artifactId>
 			<version>1.16.4-R0.1-SNAPSHOT</version>
