--- a/src/resources/plugin.yml
+++ b/src/resources/plugin.yml
@@ -2,6 +2,6 @@ name: OlympaCore
 website: https://olympa.fr
 main: fr.olympa.core.spigot.OlympaCore
 author: Tristiisch, SkytAsul
-version: 0.1-${git.commit.id.describe-short}
+version: ${project.fullVersion}
 softdepend: [ProtocolSupport, ViaVersion]
 api-version: 1.16
