--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.olympa</groupId>
 	<artifactId>olympa-core</artifactId>
-	<version>0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<repositories>
 		<repository>
 			<id>papermc-releases</id>
