--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-	xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.olympa</groupId>
 	<artifactId>olympa-core</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
 	<repositories>
 		<repository>
 			<id>papermc-releases</id>
@@ -37,6 +37,7 @@
 			</releases>
 		</repository>
 	</repositories>
+	
 	<dependencies>
 		<dependency>
 			<groupId>com.github.ProtocolSupport</groupId>
@@ -101,14 +102,17 @@
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
+	
 	<build>
 		<defaultGoal>clean package</defaultGoal>
 		<sourceDirectory>${project.basedir}/src/java/</sourceDirectory>
 		<resources>
 			<resource>
-				<directory>src/resources</directory>
+				<filtering>true</filtering>
+				<directory>${project.basedir}/src/resources</directory>
 			</resource>
 		</resources>
+		
 		<plugins>
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
@@ -124,6 +128,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
@@ -165,6 +170,7 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 	<properties>
 		<project.fullVersion>${project.artifactId}-${git.commit.id.describe-short}</project.fullVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
