--- a/src/resources/bungee.yml
+++ b/src/resources/bungee.yml
@@ -1,5 +1,5 @@
 name: OlympaBungee
 main: fr.olympa.core.bungee.OlympaBungee
 author: Tristiisch, SkytAsul
-version: 0.1
+version: ${project.fullVersion}
 website: https://olympa.fr
