up script, plugin.yml & remove usless stuff in olympaBungee

--- a/src/resources/plugin.yml
+++ b/src/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: OlympaCore
-website: https://olympa.fr
+website: https://gitlab.com/olympa/olympacore
 main: fr.olympa.core.spigot.OlympaCore
 author: Tristiisch, SkytAsul
 version: ${project.fullVersion}
