--- a/src/resources/plugin.yml
+++ b/src/resources/plugin.yml
@@ -2,6 +2,6 @@ name: OlympaCore
 website: https://gitlab.com/olympa/olympacore
 main: fr.olympa.core.spigot.OlympaCore
 author: Tristiisch, SkytAsul
-version: ${project.fullVersion}
+version: @plugin_version@
 softdepend: [ProtocolSupport, ViaVersion]
 api-version: 1.16
