--- a/build.gradle
+++ b/build.gradle
@@ -46,9 +46,9 @@ configurations.all {
 }
 
 dependencies {
-    implementation 'fr.olympa:olympa-api:0.0.1-SNAPSHOT'
-    implementation 'redis.clients:jedis:3.6.0'
-    implementation 'net.ricecode:string-similarity:1.0.0'
+    api 'fr.olympa:olympa-api:0.0.1-SNAPSHOT'
+    api 'redis.clients:jedis:3.6.0'
+    api 'net.ricecode:string-similarity:1.0.0'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.6.2'
     compileOnly 'us.myles:viaversion:3.2.1'
     compileOnly 'com.github.ProtocolSupport:ProtocolSupport:66b494a8dd'
