--- a/build.gradle
+++ b/build.gradle
@@ -72,12 +72,27 @@ def getCheckedOutGitCommitHash() {
     refHead.text.trim().take takeFromHash
 }
 
+def getGitBranch = { ->
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine 'git', 'branch', '--show-current'
+        standardOutput = stdout
+    }
+    return stdout.toString().trim()
+}
+
+def getDate() {
+    def date = new Date()
+    def formattedDate = date.format('yyyyMMddHHmmss')
+    return formattedDate
+}
+
 group = 'fr.olympa'
 version = '0.0.1-SNAPSHOT'
 description = 'olympa-core'
 java.sourceCompatibility = JavaVersion.VERSION_11
 
-def fullVersion = description + '-' + version + '-' + getCheckedOutGitCommitHash()
+def fullVersion = version + "-" + getGitBranch() + '-' + getCheckedOutGitCommitHash() + "-" + getDate()
 
 publishing {
     publications {
