Fix gradle -all

--- a/build.gradle
+++ b/build.gradle
@@ -110,6 +110,7 @@ jar {
 shadowJar{
 	archiveFileName = 'OlympaCore.jar'
 	destinationDirectory = file('build')
+    classifier = null
 }
 
 processResources {
