--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+// Olympa Core
+
 plugins {
     id 'java-library'
     id 'maven-publish'
@@ -47,7 +49,7 @@ configurations.all {
 
 dependencies {
     api 'fr.olympa:olympa-api:0.0.1-SNAPSHOT'
-    api 'redis.clients:jedis:3.6.0'
+	api 'redis.clients:jedis:3.6.0'
     api 'net.ricecode:string-similarity:1.0.0'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.6.2'
     compileOnly 'us.myles:viaversion:3.2.1'
