Up gradle version string

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,9 @@
+pluginManagement {
+  plugins {
+    id("com.github.johnrengelman.shadow") version "7.0.0"
+  }
+}
+
 rootProject.name = 'olympa-core'
 
 include 'olympa-api'
