--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 plugins {
     id 'java-library'
     id 'maven-publish'
-    id 'com.github.johnrengelman.shadow' version '7.0.0'
+    id 'com.github.johnrengelman.shadow'
 }
 
 repositories {
@@ -94,8 +94,6 @@ version = '0.0.1-SNAPSHOT'
 description = 'olympa-core'
 java.sourceCompatibility = JavaVersion.VERSION_11
 
-def fullVersion = version + "-" + getGitBranch() + '-' + getCheckedOutGitCommitHash() + "-" + getDate()
-
 publishing {
     publications {
     	shadow(MavenPublication) { publication ->
@@ -116,8 +114,9 @@ shadowJar{
 }
 
 processResources {
+	outputs.upToDateWhen { false }
     filter org.apache.tools.ant.filters.ReplaceTokens, tokens: [
-       "plugin_version": fullVersion
+       "plugin_version": version + "-" + getGitBranch() + '-' + getCheckedOutGitCommitHash() + "-" + getDate()
     ]
 }
 
