--- a/src/resources/bungee.yml
+++ b/src/resources/bungee.yml
@@ -1,5 +1,5 @@
 name: OlympaBungee
 main: fr.olympa.core.bungee.OlympaBungee
-authors: [Tristiisch, SkytAsul]
+author: [Tristiisch, SkytAsul]
 version: @plugin_version@
 website: https://gitlab.com/olympa/olympacore
