fix plugin.yml (bungee didn't support mutiple authors)

--- a/src/resources/plugin.yml
+++ b/src/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: OlympaCore
 main: fr.olympa.core.spigot.OlympaCore
-authors: [Tristiisch, SkytAsul]
+authors: Tristiisch & SkytAsul
 contributors: [Bullobily]
 version: @plugin_version@
 softdepend: [ProtocolSupport, ViaVersion]
