--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -1,5 +1,5 @@
-version: 1.41
-status: 'Développement'
+version: 1.42
+status: 'Ouvert'
 maintenance:
    messages:
       usage: '&cUsage &7» &c/maintenance [on|off|dev|add|remove|list|status] <raison|joueur>'
@@ -132,7 +132,6 @@ chat:
    - "|nike|"
    - "|ftg"
    - "|con|"
-   - "|cone|"
    - "|conne|"
    - "|connes|"
    - "|fdp|"
