--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,8 @@ version = '0.0.1-SNAPSHOT'
 description = 'olympa-core'
 java.sourceCompatibility = JavaVersion.VERSION_16
 
+def fullVersion = version + "-" + getGitBranch() + '-' + getCheckedOutGitCommitHash() + "-" + getDate()
+
 publishing {
     publications {
     	shadow(MavenPublication) { publication ->
@@ -105,6 +107,10 @@ publishing {
 jar {
 	archiveFileName = 'OlympaCore.jar'
 	destinationDirectory = file('build')
+	
+    manifest {
+        attributes "Version": fullVersion
+    }
 }
 
 shadowJar{
@@ -116,7 +122,7 @@ shadowJar{
 processResources {
 	outputs.upToDateWhen { false }
     filter org.apache.tools.ant.filters.ReplaceTokens, tokens: [
-       "plugin_version": version + "-" + getGitBranch() + '-' + getCheckedOutGitCommitHash() + "-" + getDate()
+       "plugin_version": fullVersion
     ]
 }
 
